added darkmode toggle function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Card</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="icon" href="./assets/profile.jpg" type="image/png">
     </head>
     <body>
         <div class="container">
@@ -50,6 +51,9 @@
                     <p>© 2025 Nyechi's Couture. All rights reserved.</p>
                 </footer>
             </div>
+            <!-- Toggle Theme Button -->
+            <button class="toggle-theme" onclick="toggleTheme()" title="Toggle Dark/Light Mode">🌓</button>
+
         </div>
 
         <script src="script.js"></script>
